--- a/DesignerRHN/DesignerRHN-war/web/NovedadEmpleado.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NovedadEmpleado.xhtml
@@ -127,7 +127,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooConcepto" actionListener="#{controlConcepto.recibirPaginaEntrante('novedadempleado')}" action="concepto" value="#{msg['concepto']}"  />
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooConcepto" actionListener="#{controlConcepto.recibirPaginaEntrante('novedadempleado')}" action="concepto" value=" "  />
                                     </f:facet>
                                 </p:column>
 
@@ -142,7 +142,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['dConcepto']}" />
+                                        <h:outputText value=" " />
                                     </f:facet>
                                 </p:column>
 
@@ -163,7 +163,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['inicial']}" />
+                                        <h:outputText value=" " />
                                     </f:facet>
                                 </p:column>
 
@@ -184,7 +184,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['final']}"/>
+                                        <h:outputText value=" "/>
                                     </f:facet>
                                 </p:column>
 
@@ -200,7 +200,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['vaalor']}" />
+                                        <h:outputText value=" " />
                                     </f:facet>
                                 </p:column>
 
@@ -216,7 +216,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['saldo']}" />
+                                        <h:outputText value=" " />
                                     </f:facet>
                                 </p:column>
 
@@ -233,7 +233,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooPeriodicidad" actionListener="#{controlPeriodicidades.recibirPaginaEntrante('novedadempleado')}" action="periodicidades" value="#{msg['coodigo']}"/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooPeriodicidad" actionListener="#{controlPeriodicidades.recibirPaginaEntrante('novedadempleado')}" action="periodicidades" value=" "/>
                                     </f:facet>
                                 </p:column>
 
@@ -248,7 +248,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['periodicidad']}" />
+                                        <h:outputText value=" " />
                                     </f:facet>
                                 </p:column>
 
@@ -265,7 +265,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooTercerosNit" actionListener="#{controlTercero.recibirPaginaEntrante('novedadempleado')}" action="terceros" value="#{msg['nit']}"/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooTercerosNit" actionListener="#{controlTercero.recibirPaginaEntrante('novedadempleado')}" action="terceros" value=" "/>
                                     </f:facet>
                                 </p:column>
 
@@ -280,7 +280,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['tercero']}" />
+                                        <h:outputText value=" " />
                                     </f:facet>
                                 </p:column>
 
@@ -297,7 +297,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooFormulas" action="formulas" actionListener="#{controlFormula.recibirPaginaEntrante('novedadempleado')}" value="#{msg['formula']}"/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooFormulas" action="formulas" actionListener="#{controlFormula.recibirPaginaEntrante('novedadempleado')}" value=" "/>
                                     </f:facet>
                                 </p:column>
 
@@ -313,7 +313,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['horasdias']}" />
+                                        <h:outputText value=" " />
                                     </f:facet>
                                 </p:column>
 
@@ -329,7 +329,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['minutoshoras']}" />
+                                        <h:outputText value=" " />
                                     </f:facet>
                                 </p:column>
 
@@ -347,7 +347,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['tipo']}" />
+                                        <h:outputText value=" " />
                                     </f:facet>
                                 </p:column>
 
