--- a/DesignerRHN/DesignerRHN-war/web/adminreportes.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/adminreportes.xhtml
@@ -113,7 +113,7 @@
                                                 <f:selectItem itemLabel="PDF" itemValue="PDF" />  
                                                 <f:selectItem itemLabel="XHTML" itemValue="XHTML" />  
                                                 <f:selectItem itemLabel="XLS" itemValue="XLS" />  
-                                                <f:selectItem itemLabel="EXCEL" itemValue="XLSX" />  
+                                                <f:selectItem itemLabel="EXCEL" itemValue="EXCEL" />  
                                                 <f:selectItem itemLabel="TXT" itemValue="TXT" />    
                                                 <f:selectItem itemLabel="CSV" itemValue="CSV" />
                                                 <p:ajax listener="#{controlAdminreportes.seleccionarTipo(info.estadoTipo, indice, celda)}" event="change" update="editarTipos" />
@@ -570,7 +570,7 @@
                                 <f:selectItem itemLabel="PDF" itemValue="PDF" />  
                                 <f:selectItem itemLabel="XHTML" itemValue="XHTML" />  
                                 <f:selectItem itemLabel="XLS" itemValue="XLS" />  
-                                <f:selectItem itemLabel="EXCEL" itemValue="XLSX" />  
+                                <f:selectItem itemLabel="EXCEL" itemValue="EXCEL" />  
                                 <f:selectItem itemLabel="TXT" itemValue="TXT" />    
                                 <f:selectItem itemLabel="CSV" itemValue="CSV" />
                                 <p:ajax listener="#{controlAdminreportes.seleccionarTipoNuevoInforeporte(controlAdminreportes.nuevoInforeporte.estadoTipo, 1)}" update="@this" />
@@ -726,7 +726,7 @@
                                 <f:selectItem itemLabel="PDF" itemValue="PDF" />  
                                 <f:selectItem itemLabel="XHTML" itemValue="XHTML" />  
                                 <f:selectItem itemLabel="XLS" itemValue="XLS" />  
-                                <f:selectItem itemLabel="EXCEL" itemValue="XLSX" />  
+                                <f:selectItem itemLabel="EXCEL" itemValue="EXCEL" />  
                                 <f:selectItem itemLabel="TXT" itemValue="TXT" />    
                                 <f:selectItem itemLabel="CSV" itemValue="CSV" />
                                 <p:ajax listener="#{controlAdminreportes.seleccionarTipoNuevoInforeporte(controlAdminreportes.duplicarInforeporte.estadoTipo, 1)}" update="@this" />
