--- a/DesignerRHN/DesignerRHN-war/web/tipocotizante.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/tipocotizante.xhtml
@@ -133,7 +133,7 @@
                                 <p:column style="padding: 0px"  width="140" headerText="#{msg['subtipocotizante']}" sortBy="#{tipos.estadoSubTipoCotizante}" filterBy="#{tipos.estadoSubTipoCotizante}" filterMatchMode="contains" id="tcSubtipoCotizante" filterStyle="display: none; visibility: hidden;" >                                  
 
                                     <p:selectOneMenu  id="editarSubTipoCotizante" value="#{tipos.estadoSubTipoCotizante}" style="width: 135px;height: 20px">  
-                                        <f:selectItem itemLabel="" itemValue="null" />  
+                                        <f:selectItem itemLabel="" itemValue=" " />  
                                         <f:selectItem itemLabel="1. Dependiente Pensionado por Vejez Activo." itemValue="1" />  
                                         <f:selectItem itemLabel="2. Independiente Pensionado por Vejez Activo" itemValue="2" />  
                                         <f:selectItem itemLabel="3. Cotizante no obligado a cotización a pensiones por edad" itemValue="3" />  
@@ -142,8 +142,6 @@
                                         <f:selectItem itemLabel="6. Cotizante perteneciente a un régimen exceptuado de pensiones o a entidades autori..." itemValue="6" />
                                         <p:ajax listener="#{controlTipoCotizante.seleccionarSubTipoCotizante(tipos.estadoSubTipoCotizante, indice, celda)}" event="change" update="@this" />
                                     </p:selectOneMenu>
-
-
                                     
                                 </p:column>
 
@@ -465,7 +463,7 @@
 
                             <strong><h:outputText value="#{msg['subtipocotizanteNTC']}" style=" position: absolute; left:350px; top: 165px" /></strong>
                             <p:selectOneMenu id="nuevoSubTipoCotizacion" value="#{controlTipoCotizante.nuevoTipoCotizante.estadoSubTipoCotizante}"  style=" width: 122px; position: absolute; left: 470px; top: 160px; text-transform: uppercase">
-                                <f:selectItem itemLabel="" itemValue="null" />  
+                                <f:selectItem itemLabel="" itemValue=" " />  
                                 <f:selectItem itemLabel="1. Dependiente Pensionado por Vejez Activo." itemValue="1" />  
                                 <f:selectItem itemLabel="2. Independiente Pensionado por Vejez Activo" itemValue="2" />  
                                 <f:selectItem itemLabel="3. Cotizante no obligado a cotización a pensiones por edad" itemValue="3" />  
@@ -583,7 +581,7 @@
 
                             <strong><h:outputText value="#{msg['subtipocotizanteNTC']}" style=" position: absolute; left:350px; top: 165px" /></strong>
                             <p:selectOneMenu id="duplicarSubTipoCotizacion" value="#{controlTipoCotizante.duplicarTipoCotizante.estadoSubTipoCotizante}"  style=" width: 122px; position: absolute; left: 470px; top: 160px; text-transform: uppercase">
-                                <f:selectItem itemLabel="" itemValue="null" />  
+                                <f:selectItem itemLabel="" itemValue=" " />  
                                 <f:selectItem itemLabel="1. Dependiente Pensionado por Vejez Activo." itemValue="1" />  
                                 <f:selectItem itemLabel="2. Independiente Pensionado por Vejez Activo" itemValue="2" />  
                                 <f:selectItem itemLabel="3. Cotizante no obligado a cotización a pensiones por edad" itemValue="3" />  
